syntax = "proto3";

enum MessageType
{
    InvalidType = 0;

    ScanRequestType = 1000;
    ScanResponseType = 1001;
    PairRequestType = 1002;
    PairResponseType = 1003;
    StopPairRequestType = 1004;
    StopPairResponseType = 1005;

    FsRequestType = 3000;
    FsResponseType = 3001;
    FsSendFileRequestType = 3002;
    FsSendFileResponseType = 3003;
    FsMethodGetAttrRequestType = 3100;
    FsMethodGetAttrResponseType = 3101;
    FsMethodReadRequestType = 3102;
    FsMethodReadResponseType = 3103;
    FsMethodReadDirRequestType = 3104;
    FsMethodReadDirResponseType = 3105;
    FsMethodOpenRequestType = 3106;
    FsMethodOpenResponseType = 3107;
    FsMethodReleaseRequestType = 3108;
    FsMethodReleaseResponseType = 3109;

    InputEventRequestType = 4000;
    InputEventResponseType = 4001;

    SyncClipboardRequestType = 5000;
    SyncClipboardResponseType = 5001;

    RemoteDisplayConfigRequestType = 6000;
    RemoteDisplayConfigResponseType = 6001;
    RemoteDisplaySendRequestType = 6002;
    RemoteDisplaySendResponseType = 6003;
}

message BaseMessage
{
    fixed32 type = 1;   // 消息类型，取值为 enum MessageType
    fixed64 size = 2;   // 消息长度
}
